[package]
name = "forky_play"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[features]
shader_debug = []
shader_debug_internal = []

[dependencies]
### Internal ###
forky_core.workspace = true
forky_bevy.workspace = true

### Game ###
bevy = { workspace = true, default-features = true }
# bevy-inspector-egui.workspace = true
# bevy_rapier3d.workspace = true
# bevy_mod_debugdump.workspace = true
# wgpu.workspace = true

### Utility ###
extend.workspace = true
anyhow.workspace = true
petgraph = { version = "0.7", features = ["serde-1"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
forky_web.workspace = true

[dev-dependencies]
sweet.workspace = true
# forky_fs = {workspace = true }

[[example]]
name = "test_forky_play"
required-features = ["sweet/bevy"]
path = "test/sweet.rs"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]


### Optimization https://bevyengine.org/learn/book/getting-started/setup/

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=n"]
