[package]
name = "forky_spline"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[dependencies]
forky_core = {workspace = true }
forky_play = {workspace = true}
extend = {workspace = true}
bevy = {workspace = true}
# bevy_prototype_debug_lines = {workspace = true}
# bevy_easings = {workspace = true}
# bevy_mod_debugdump = {workspace = true}
# wgpu = {workspace = true}

# dev dependency?

[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
