[package]
name = "forky_style"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license-file = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
cssparser = { workspace = true }

[lib]
proc-macro = true
