[package]
name = "forky_test"
version = {workspace=true}
edition = {workspace=true}
license-file = {workspace=true}
readme = "README.md"
description = {workspace=true}
repository = {workspace=true}

[dependencies]
forky_core = {workspace = true}
inventory = {workspace = true}
crossterm = {workspace = true}
colorize = "0.1.0"
gag = "1.0.0"
backtrace = "0.3.66"

[[test]]
name = "forky"
path = "tests/main.rs"
harness = false