[package]
name = "forky_test"
version = {workspace=true}
edition = {workspace=true}
license-file = {workspace=true}
readme = "README.md"
description = {workspace=true}
repository = {workspace=true}

[dependencies]
syn = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false


[lib]
proc-macro = true