[package]
name = "forky_test"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }

[lib]
proc-macro = true
