[package]
name = "forky_wasm"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}


[dependencies]
# extend = {workspace = true}
# rand = {workspace = true}
# num-traits = {workspace = true}

[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
