[package]
name = "forky_wasm"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = {workspace=true}
description = {workspace=true}
repository = {workspace=true}

[dependencies]
forky_play = {workspace = true}
bevy = {workspace = true}
anyhow = {workspace = true}
wasm-bindgen = {workspace = true}
futures = {workspace = true}
js-sys = {workspace = true}
web-sys = {workspace = true}
wgpu = {workspace = true}
wasm-bindgen-futures = {workspace = true}
console_error_panic_hook = {workspace = true}


[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
