[package]
name = "forky_web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }


[dependencies]
forky_core = { workspace = true }
anyhow = { workspace = true }
extend = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
# rand = { workspace = true }
# getrandom = { workspace = true }
# num-traits = { workspace = true }

js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
leptos = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }

[[example]]
name = "sweet_forky_web"
path = "test/sweet.rs"
