[package]
name = "forky_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
forky_core.workspace = true
anyhow.workspace = true
extend.workspace = true

js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true


[dev-dependencies]
sweet.workspace = true
