[package]
name = "gamai"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "A flexible task switching library suitable for game AI & robotics"
documentation = "https://mrchantey.github.io/forky/docs/gamai"
categories = ["game-engines", "game-development", "data-structures"]
keywords = [
	"game-ai",
	"robotics",
	"behavior-tree",
	"utility-ai",
	"state-machine",
]

# [features]
# bevy = ["dep:bevy_app"]

[dependencies]
gamai_macros = { workspace = true }
bevy_ecs = { workspace = true }
extend = { workspace = true }
bevy_app = { workspace = true }
# bevy_app = { workspace = true, optional = true }
anyhow = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }
## test macros ##
rstml = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
# # for graph vis
# bevy = { workspace = true }
# bevy_mod_debugdump = { workspace = true }


[[example]]
name = "test_gamai"
required-features = ["sweet/bevy_ecs"]
path = "test/sweet.rs"
