[package]
name = "gamai"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "An ECS task switching library suitable for game AI & robotics"
documentation = "https://mrchantey.github.io/forky/docs/gamai"
categories = ["game-engines", "game-development", "data-structures"]
keywords = [
	"game-ai",
	"robotics",
	"behavior-tree",
	"utility-ai",
	"state-machine",
]

[dependencies]
gamai_macros = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_time = { workspace = true }
extend = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }
## test macros ##
rstml = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }

[[example]]
name = "test_gamai"
required-features = ["sweet/bevy_ecs"]
path = "test/sweet.rs"
