[package]
name = "gamai"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
documentation = "https://mrchantey.github.io/forky/docs/gamai"
description = "Modular task switching library suitable for Game AI and Robotics."
categories = [
	"game-engines",
	"game-development",
	"data-structures",
	"algorithms",
	"science::robotics",
]
keywords = [
	"game-ai",
	"robotics",
	"behavior-tree",
	"utility-ai",
	"state-machine",
]

[dependencies]
gamai_macros = { workspace = true }


anyhow = { workspace = true }
heck = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typetag = { workspace = true }
extend = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

bevy_app = { workspace = true }
bevy_core = { workspace = true }
bevy_derive = { workspace = true }
bevy_ecs = { workspace = true }
bevy_time = { workspace = true }
bevy_utils = { workspace = true }

[dev-dependencies]
sweet = { workspace = true }

[[example]]
name = "test_gamai"
path = "test/sweet.rs"
