[package]
name = "mystic"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
readme = "README.md"
description = "A set of tools for interpertation of tarot, astrology etc."
keywords = ["tarot", "cards", "astrology", "numerology"]
repository = {workspace=true}

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
derive_deref = {workspace = true}
forky_core = {workspace = true}
forky_fs = {workspace = true}
# forky_ai = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}

[target.'cfg(windows)'.dev-dependencies]
sweet = {workspace = true}

[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
