[package]
name = "sweet"
description = "Declarative testing framework"
categories = ["development-tools::testing"]
readme = "README.md"
version = {workspace=true}
edition = {workspace=true}
authors = {workspace=true}
documentation = {workspace=true}
license-file = {workspace=true}
repository = {workspace=true}

[dependencies]
forky_core = {workspace = true}
forky_test = {workspace = true}

getrandom = {workspace = true, features = ["js"] }
anyhow = {workspace = true}
inventory = {workspace = true}
colorize = {workspace = true}
backtrace = {workspace = true}
# tokio = {workspace = true}
rayon = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky_fs = {workspace = true}
crossterm = {workspace = true}
gag = {workspace = true}


[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
