[package]
name = "sweet"
description = "Declarative testing framework"
categories = ["development-tools::testing"]
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }

# [[bin]]
# name = "wasm_tests"
# path = "src/lib.rs"

[dependencies]
forky_core = { workspace = true }
forky_test = { workspace = true }

getrandom = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }
colorize = { workspace = true }
backtrace = { workspace = true }

### async ###
rayon = { workspace = true }
futures = { workspace = true }
async-std = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = {workspace = true}
forky_fs = { workspace = true }
crossterm = { workspace = true }
gag = { workspace = true }


[[test]]
name = "sweet"
path = "test/sweet.rs"
harness = false
