[package]
name = "sweet"
description = "Declarative full-stack test framework"
categories = ["development-tools::testing"]
keywords = [ # 5 at most
	"test",
	"unit",
	"e2e",
	"browser",
	"webdriver",
]
documentation = "https://mrchantey.github.io/forky/docs/sweet"
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
bevy = ["dep:bevy"]

[dependencies]
### internal ###
forky_core = { workspace = true }
sweet_macros = { workspace = true }

### misc ###
anyhow = { workspace = true }
getrandom = { workspace = true }
inventory = { workspace = true }
extend = { workspace = true }

### console ###
colorize = { workspace = true }
backtrace = { workspace = true }

### parse ###
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }

### async ###
rayon = { workspace = true }
futures = { workspace = true }

### bevy ###
bevy = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
forky_web = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
clap = { workspace = true }
forky_fs = { workspace = true }
crossterm = { workspace = true }
gag = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
forky_fs = { workspace = true }
fantoccini = { workspace = true }


[[example]]
name = "test_sweet"
path = "test/sweet.rs"
required-features = ["bevy"]

[[example]]
name = "test_sweet_wasm"
path = "test/sweet_wasm.rs"
# cant currently cicd windows wasm bevy
# required-features = ["bevy"]