[package]
name = "wasm_sketch"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true

# [package]
# name = "wasm_sketch"
# version = {workspace=true}
# edition = {workspace=true}
# authors = {workspace=true}
# documentation = {workspace=true}
# license-file = {workspace=true}
# readme = {workspace=true}
# description = {workspace=true}
# repository = {workspace=true}

# [lib]
# crate-type = ["cdylib"]

# [profile.release]
# opt-level = 's'
# lto = true

# [dependencies]

# [workspace]
