[package]
name = "forky_core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }


[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
extend = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
num-traits = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
leptos = { workspace = true }
